# VolcengineWTN

./: LICENSE  README.md  README_en.md
SDK/: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  README_en.md
SDK/cmake/: android.cmake  ios.cmake  linux.cmake  sources.cmake  third_party.cmake
SDK/cmake/toolchains/: android.cmake  ios.cmake  linux.cmake  macro.android.cmake  macro.apple.cmake  macro.common.cmake  pre_config.cmake
SDK/doc/: Build_Instruction.md  Build_webrtc.md
SDK/doc/Android/: api.html  api.md  callback.html  callback.md  errorcode.html  keytype.html  keytype.md  overview.html  overview.md
SDK/doc/en/: Build_Instruction.md  Build_webrtc.md
SDK/doc/en/Android/: api.md  callback.md  keytype.md  overview.md
SDK/doc/en/iOS/: api.md  callback.md  keytype.md  overview.md
SDK/doc/iOS/: api.html  api.md  callback.html  callback.md  keytype.html  keytype.md  overview.html  overview.md
SDK/doc/zh/: Build_Instruction.md  Build_webrtc.md
SDK/doc/zh/Android/: api.md  callback.md  keytype.md  overview.md
SDK/doc/zh/iOS/: api.md  callback.md  keytype.md  overview.md
SDK/sdk/android/: .gitignore  build.gradle  gradle.properties  proguard-rules.pro  settings.gradle.kts
SDK/sdk/android/buildSrc/: .gitignore  build.gradle.kts
SDK/sdk/android/buildSrc/src/main/java/: Prebuild.kt
SDK/sdk/android/jni_generator/: build_utils.py  jni_generator.py  jni_registration_generator.py
SDK/sdk/android/vewtn/: build.gradle
SDK/sdk/android/vewtn/src/main/: AndroidManifest.xml
SDK/sdk/android/vewtn/src/main/jni/: jni_onload.cc  native_functions_jni.cc  publisher_event_handler_jni.cc  publisher_event_handler_jni.h  rtc_event_handler_jni.cc  rtc_event_handler_jni.h  (+3 more)
SDK/sdk/ios/: Info.plist  Publisher.h  Publisher.mm  PublisherEventHandler.h  PublisherEventHandler.mm  Subscriber.h  Subscriber.mm  SubscriberEventHandler.h  SubscriberEventHandler.mm  VEWTNEngine.h  VEWTNEngine.mm  VEWTNEventHandler.h  VEWTNEventHandler.mm  VEWTNPubSubInternal.h  VEWTNPublisher.h  VEWTNPublisher.mm  VEWTNSubscriber.h  VEWTNSubscriber.mm  VeWTNDefines.h  export.txt
SDK/src/: http_client.cc  http_client.h  publisher_impl.cc  publisher_impl.h  subscriber_impl.cc  subscriber_impl.h  vewtn_interface.h  webrtc_wrapper.cc  webrtc_wrapper.h  whip_client.cc  whip_client.h  wtn_engine.cc  wtn_engine.h  wtn_event_handler.cc  wtn_event_handler.h  wtn_interface.h  wtn_publisher_impl.cc  wtn_publisher_impl.h  wtn_stats_callback.cc  wtn_stats_callback.h  wtn_subscriber_impl.cc  wtn_subscriber_impl.h  wtn_webrtc_wrapper.cc  wtn_webrtc_wrapper.h
SDK/src/external_module/: external_audio_device_module.cc  external_audio_device_module.h  external_video_source.cc  external_video_source.h  fake_decoder.cc  fake_decoder.h  fake_encoder.cc  fake_encoder.h  video_sink_proxy.cc  video_sink_proxy.h
SDK/src/platform/: android_platform_helper.cc  android_platform_helper.h  objc_platform_helper.h  objc_platform_helper.mm
SDK/src/utils/: http_client.cc  http_client.h  whip_client.cc  whip_client.h
(+219 files in other folders)
